kubernetes/apps/flux-system/webhooks/app/github/httproute.yaml
---
# yaml-language-server: $schema=https://github.com/datreeio/CRDs-catalog/raw/refs/heads/main/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: github-webhook
  annotations:
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
spec:
  hostnames:
    - flux-webhook.stasky.win
  parentRefs:
    - name: external
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - name: webhook-receiver
          namespace: flux-system
          port: 80
      matches:
        - path:
            type: PathPrefix
            value: /hook/
